# zerotooprod

./: .env  .gitignore  Cargo.toml  configuration.yaml  readme.md  todo.md
.cargo/: config.toml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscribe.rs
tests/: health_check.rs
