[package]
name = "zerotooprod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zerotooprod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = [ "derive" ] }
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
# this implementation of Log trait logs to the terminal
env_logger = "0.9"
tracing = { version = "0.1", features = ["log"] }
# subscriber and layers
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
# specifically to get the benefit of inheriting metadata as opposed to formatting layer provided by tracing-subscriber
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.7"
default-features = false
features = [ "runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate" ]

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
reqwest = "0.11"
